[package]
name = "td"
version = "0.1.0"
edition = "2021"
description = "A simple and powerful todo CLI"
license = "MIT"
homepage = "https://td-cli.com"
repository = "https://github.com/Inflect-Labs/td"
authors = ["Ethan Trang"]

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
