[package]
name = "tm"
version = "1.0.1"
edition = "2021"
description = "A simple and powerful task manager CLI"
license = "MIT"
homepage = "https://tm-cli.com"
repository = "https://github.com/Inflect-Labs/tm"
authors = ["Ethan Trang"]

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
